[package]
name = "circleci-logs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
regex = "1"
colored = "2"
chrono = { version = "0.4", features = ["clock"] }
dialoguer = "0.11"
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
